# TRG-planner

config/: superodom_k_rail.yaml
cpp/trg_planner/core/trg_planner/include/planner/: trg_planner.h
cpp/trg_planner/core/trg_planner/src/planner/: trg_planner.cpp
pipelines/ros2/: CMakeLists.txt  TRG_SUPERODOM_INTERFACE.md  package.xml
pipelines/ros2/config/: superodom_params.yaml
pipelines/ros2/include/: ros2_node.h
pipelines/ros2/launch/: trg_planner_wMap.py
pipelines/ros2/src/: main.cpp  ros2_node.cpp
